# ai-agent-hardcoded

./: .gitignore  AGENTS.md  README.md  TODO.md  ai-agent-bootcamp.code-workspace  ai_agent.py  app.py  constants.py  main.py  prompts.py  pyproject.toml  requests.py  schemas.py  tools.py  utils.py
frontend/: package-lock.json
frontend/src/: App.css  App.jsx  index.css  styles.css
services/: ai_service.py  factory.py  gemini_service.py  openai_service.py
